<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:background="#C9E3CB"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/header"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:ems="10"
            android:hint="@string/input"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/option1"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>

            <Button
                android:id="@+id/button1"
                android:layout_width="170dp"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:background="#F96161"
                android:onClick="button1Listener"
                android:text="@string/button1"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="273dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>